--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+	<a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjs6MHwvKX7AhVITWwGHVBaAi4QFnoECA0QAQ&url=https%3A%2F%2Fmusic.com%2F&usg=AOvVaw0-okTmIjzWeCCZaFWiccLn">
+	Home
+</a>&nbsp;
+<a href="https://www.energy.gov/about-us">About us</a>&nbsp;
+<a href="https://support.microsoft.com/en-us/contactus">Contact us</a>
+	<h1>3 random audios</h1>
+<!-- <audio controls> -->
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+	<audio controls src= "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+		<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
+</audio>
+</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
